<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".InserirActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewNome"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_nome"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNome"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewFone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_fone"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtFone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn_cancelar"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#A52A2A"
            android:textColor="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn_salvar"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#00868B"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>

