<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewUsuario"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_usuario"
        android:textStyle="bold"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/edtUsuario" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewSenha"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_senha"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/edtSenha"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/btnEntrar"
        android:text="@string/btn_entrar"
        android:layout_marginTop="30dp"
        android:background="#00868B"
        android:textColor="#fff"
        android:textStyle="bold"
        android:onClick="onClickEntrar"/>

</LinearLayout>